# ComfyUI-VisualArea-Nodes

./: .gitignore  README.md  __init__.py  area_prompt.py  pyproject.toml  visual_area_prompt.py
.github/workflows/: publish.yml
nodes/: visual_area_prompt.py  visual_area_prompt_advanced.py
web/: visual_area_prompt.js  visual_area_prompt_advanced.js
web/widgets/: graph_widget.js
