[project]
name = "comfyui-visualarea-nodes"
description = "This is a collection of nodes created to aid when managing area conditionings."
version = "1.1.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Fuwuffyi/ComfyUI-VisualArea-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "fuwuffyi"
DisplayName = "ComfyUI-VisualArea-Nodes"
Icon = ""
